theme: box seems to shift center in dev; fix.

--- a/themes/hugo-universal-theme/static/css/custom.css
+++ b/themes/hugo-universal-theme/static/css/custom.css
@@ -7,7 +7,13 @@
   max-height: 190px;
   margin: auto;
 }
+.box-image-text p {
+  text-align: justify;
+}
 
+.box-image-text h4 {
+  text-align: left;
+}
 .box-simple {
   min-height: 230px;
 }
